spacing on mobile fixed for headings

--- a/src/Main.css
+++ b/src/Main.css
@@ -252,9 +252,6 @@ a.article:hover {
         margin-left: -250px;
         width: 200px;
     }
-    #sidebar.active {
-        margin-left: 0;
-    }
     #content {
         width: 100%;
     }
@@ -262,14 +259,8 @@ a.article:hover {
         width: calc(100% - 200px);
         background-color: #000; opacity: 0.5;
     }
-    #sidebarCollapse span {
-        display: none;
-    }
-    #rendered-content.inactive {
-        transition: all .3s;
-    }
-    #rendered-content.active{
-        display: none;   
+    h1{
+        margin-top: 50px;
     }
 }
 
@@ -281,20 +272,9 @@ a.article:hover {
     #sidebar .sidebar-header {
         margin-left: -10px;
     }
-    #sidebar.active {
-        margin-left: 0;
-    }
     #content.active {
         width: calc(100% - 160px);
         background-color: #000; opacity: 0.5;
     }
-    #rendered-content.inactive {
-        transition: all .3s;
-    }
-    #rendered-content.inactive {
-        transition: all .3s;
-    }
-    #rendered-content.active{
-        display: none;   
-    }
+    
 }
