--- a/src/Profile.css
+++ b/src/Profile.css
@@ -82,7 +82,7 @@
         width: 90%;
     }
     #tophr{
-        margin-top: 100px;
+        margin-top: 25px;
     }
     #container img{
         padding: 70px 0;
